WUP_06 incomplete report

--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -1,7 +1,7 @@
 ---
 title: "GSS challange"
-author: "Put your name here!"
-date: "put the date here"
+author: "Marium Khanum"
+date: "October 8, 2020"
 output: html_document
 ---
 
@@ -18,6 +18,9 @@ GSS <-read.csv(file="GSScsv.csv",header=TRUE)
 
 Is belief in the bigbang theory (BIGBANG) independent of belief in an afterlife (POSTLIFE)?
 
+$H_0$: There is no relationship between the belief in the BIGBANG theory and the belief in an afterlife (POSTLIFE).    
+$H_A$: There is a relationship between the belief in the BIGBANG theory and the belief in an afterlife (POSTLIFE).   
+  
 # Methods
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method. Discuss what data manipulations may be needed for example subsetting or other binning procedures and what sort of graphical displays and inferential tools will be used!-->
@@ -32,15 +35,33 @@ Is belief in the bigbang theory (BIGBANG) independent of belief in an afterlife 
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question. Bottom line is to explain the features of the graph that are relevant to conforming or departing to what is expected by your null hypothesis !-->
 
+```{r}
+barchartGC(~BIGBANG + POSTLIFE,data=GSS)
+barchartGC(~BIGBANG + POSTLIFE,data=GSS, type="percent")
+
+```
+
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+table1 <- xtabs(~BIGBANG + POSTLIFE, data=GSS)
+rowPerc(table1)
+colPerc(table1)
+```
 ## Inferential Results
 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
+```{r}
+chisq.test(table1)
+chisqtestGC(table1)
+fisher.test(table1)
+```
 
 # Discussion and Conclusion
 
-<!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+<!--Discussion and conclusion here.  If you found a relationship be sure to consider whether the relationship occurs because one of the variables causes the other, or whether they perhaps are related for some other reason.  Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
+
+As the data shows, the P value is greater than 0.05, we therefore fail to reject the null hypothesis assuming that we do not have evidence to show if the belief in the BIGBANG and POSTLIFE are related in any way.  
