--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -25,6 +25,8 @@ $H_A$: There is a relationship between the belief in the BIGBANG theory and the 
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method. Discuss what data manipulations may be needed for example subsetting or other binning procedures and what sort of graphical displays and inferential tools will be used!-->
 
+Since both variables are categorical, we will be using a bar plot and a table to show graphical and numerical results.  
+
 # Results
 
 <!--Divide this section into two sub-sections:  One for your descriptive  results and one for your inferential results.!-->
